--- a/translations/en.json
+++ b/translations/en.json
@@ -2775,5 +2775,8 @@
   "your-recovery-phrase": "Your seed phrase",
   "your-recovery-phrase-description": "This is your seed phrase. You use it to prove that this is your wallet. You only get to see it once! Write it on paper and keep it in a secure place. You will need it if you lose or reinstall your wallet.",
   "your-tip-limit": "Your tip limit",
-  "youre-on-mobile-network": "You’re on mobile network"
+  "youre-on-mobile-network": "You’re on mobile network",
+  "pair-and-sync": "Pair and Sync",
+  "new-device-detected": "A new device has been detected. You can see device ID below and on your other device. Only confirm the request if device ID matches.",
+  "pair-new-device-and-sync": "Pair new device and sync profile"
 }
