--- a/translations/en.json
+++ b/translations/en.json
@@ -1941,8 +1941,8 @@
     "pinned-by": "Pinned by",
     "pin-limit-reached": "Pin limit reached. Unpin a previous message first.",
     "no-fees": "No fees",
-    "not-enough-assets-to-pay-gas-fees": "Not enough assets to pay gas fees.",
-    "not-enough-assets": "Not enough assets to complete transaction.",
+    "not-enough-assets-to-pay-gas-fees": "Not enough assets to pay gas fees",
+    "not-enough-assets": "Not enough assets to complete transaction",
     "max-fee": "Max fee",
     "max-fees": "Max fees",
     "max-priority-fee": "Max priority fee",
@@ -2052,6 +2052,7 @@
     "wallet-connect-sign-message-header": "wants you to sign the message with",
     "wallet-connect-send-transaction-header": "wants you to send this transaction with",
     "wallet-connect-sign-transaction-header": "wants you to sign this transaction with",
+    "wallet-connect-sign-warning": "Sign only if you trust the dApp",
     "wallet-connect-sign-message-warning": "Sign messages only if you trust the dApp",
     "wallet-connect-send-transaction-warning": "Send transactions only if you trust the dApp",
     "wallet-connect-sign-transaction-warning": "Sign transactions only if you trust the dApp",
@@ -2746,7 +2747,6 @@
     "saved-address-network-preference-selection-description": "Only change if you know which networks the address owner is happy to to receive funds on",
     "add-preferences": "Add preferences",
     "buy-eth": "Buy ETH",
-    "not-enough-assets": "Not enough assets to pay gas fees",
     "send-from-network": "Send from {{network}}",
     "define-amount-sent-from-network": "Define amount sent from {{network}} network",
     "dont-auto-recalculate-network": "Don't auto recalculate {{network}}",
