--- a/translations/en.json
+++ b/translations/en.json
@@ -2626,8 +2626,10 @@
   "wallet-backup-recovery-title": "Back up your seed phrase",
   "wallet-choose-recipient": "Choose Recipient",
   "wallet-collectibles": "Collectibles",
-  "dapp-connection-request-rejected": "Connection request from {{dapp}} declined",
-  "dapp-connection-request-approved": "Connected to {{dapp}}, go back to the dApp",
+  "wallet-connect-proposal-rejected-toast": "Connection request from {{dapp}} declined",
+  "wallet-connect-proposal-approved-toast": "Connected to {{dapp}}, go back to the dApp",
+  "wallet-connect-message-request-rejected-toast": "Message sign request rejected",
+  "wallet-connect-message-request-success-toast": "Message signed, go back to the dApp",
   "wallet-connect": "Wallet Connect",
   "wallet-connect-2.0": "Wallet Connect 2.0",
   "wallet-connect-app-connected": "is connected",
